--- a/TestDiscoveryService/appsettings.json
+++ b/TestDiscoveryService/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "eureka": {
     "client": {
-      "serviceUrl": "http://172.21.160.1:8761/eureka/",
+      "serviceUrl": "http://localhost:8761/eureka/",
       "shouldFetchRegistry": "false",
       "ValidateCertificates": "false"
     },
